# auth0_cli_poc

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: auth.rs  cli.rs  main.rs  server.rs
