[package]
name = "auth0_cli_poc"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3.6"
tokio = { version = "1.36", features = ["full"] }
webbrowser = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.5.1", features = ["derive"] }